--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
-[package]
-edition = "2021"
-name = "advent_of_code"
-version = "0.1.0"
+[workspace]
+# members = ["day1_trebuchet", "day2_cube_conundrum"]
+members = ["day*"]
 
-[dev-dependencies]
-rstest = "0.18.2"
-
-[dependencies]
+[workspace.dependencies]
 nom = "7.1.3"
+rstest = "0.18.2"
