--- a/day5_if_you_give_a_seed_a_fertilizer/Cargo.toml
+++ b/day5_if_you_give_a_seed_a_fertilizer/Cargo.toml
@@ -5,8 +5,10 @@ version = "0.1.0"
 
 [dependencies]
 btree-range-map = "0.7.2"
+indicatif = {version = "0.17.7", features = ["rayon"]}
 itertools = "0.12.0"
 nom.workspace = true
+rayon = "1.8.0"
 
 [dev-dependencies]
 rstest.workspace = true
